# pubsub_zmq

./: .gitignore  docker-compose.yml  main_publisher.py  main_subscriber.py  protocol.md  publisher.py  readme.md  run_tests.sh  subscriber.py
shared/: result.json
src/cpp/: CMakeLists.txt  Dockerfile
src/cpp/include/: publisher.hpp  subscriber.hpp
src/cpp/src/: publisher.cpp  subscriber.cpp
src/cpp/tests/integration/: main_publisher.cpp  main_subscriber.cpp
src/cpp/tests/unit/: test_pubsub.cpp
src/go/: Dockerfile  README.md  go.mod  go.sum  main_publisher.go  main_subscriber.go  publisher.go  readme.md  subscriber.go
src/go/examples/: main_publisher.go  main_subscriber.go
src/go/publisher/: publisher.go
src/go/subscriber/: subscriber.go
src/go/tests/: pubsub_test.go
src/go/tests/integration/: main_publisher.go  main_subscriber.go  run_tests.sh
src/go/tests/unit/: pubsub_test.go
src/python/: Dockerfile  main_publisher.py  main_subscriber.py  publisher.py  readme.md  requirements.txt  subscriber.py
src/python/examples/: main_publisher.py  main_subscriber.py
src/python/tests/: test_pubsub.py
src/python/tests/integration/: main_publisher.py  main_subscriber.py
src/python/tests/unit/: test_pubsub.py
